Drag and Drop still doesn't work

--- a/Sequence.html
+++ b/Sequence.html
@@ -41,7 +41,7 @@
     <script type="text/javascript">
       function init(){
          initAudio();
-         initUploadDrop(document.getElementById("standby"));
+         initUploadDrop(document.getElementById("standby"), document.getElementById("playlist"));
       }
 
 
