Drag and Drop works now!

--- a/Sequence.html
+++ b/Sequence.html
@@ -41,7 +41,8 @@
     <script type="text/javascript">
       function init(){
          initAudio();
-         initUploadDrop(document.getElementById("standby"), document.getElementById("playlist"));
+         initUploadDrop(document.getElementById("standby"));
+         initDropZones(document.getElementById("standby"), document.getElementById("playlist"));
       }
 
 
