Well, at least drag/drop works now...

--- a/Sequence.html
+++ b/Sequence.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Sequence.css">
+    <script type="text/javascript" src="Helpers.js"></script>
+    <script type="text/javascript" src="Globals.js"></script>
     <script type="text/javascript" src="Sequence.js"></script>
     <title>Sequence</title>
   </head>
@@ -20,7 +22,7 @@
          Playlist
       </span>
       <br/><br/><br/>
-      <div class="track" draggable="true">
+      <!--<div class="track" draggable="true">
          <div class="track-background"></div>
          <div class="track-highlight"></div>
          <div class="track-progressbar">
@@ -29,7 +31,7 @@
          <div class="track-name">Test</div>
          <div class="track-description">00:00/00:00</div>
 
-      </div>
+      </div>-->
     </div>
     <div id="standby">
       <span id="playlist-label">
