--- a/Sequence - Kopie.html
+++ b/Sequence - Kopie.html
@@ -1,11 +1,15 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <title>Sequence</title>
         <style>
             body{
+                margin: 0;
                 background-color: #ddd;
                 background: linear-gradient(45deg, #dddddd, #f0f0f0); 
                 font-family: "Roboto", sans-serif;
+                min-height: 100vh;
+                min-width: 100vw;
             }
             #pads{
                 min-height: 90vh;
