--- a/Sequence.html
+++ b/Sequence.html
@@ -30,17 +30,27 @@
                 right: 0;
                 bottom: 0;
                 font-size: 1.5rem;
+                display: flex;
+                flex-direction: row;
             }
             #header-controls > span{
                 display: inline-block;
-                margin-left: 0.2em;
-                width: 1em;
+                margin-left: 0em;
+                width: 1.25em;
                 text-align: center;
+                border-radius: 3px;
+                transition: background-color 0.15s;
+            }
+            #header-controls > span:hover{
+                background-color: rgba(255,255,255,0.3);
+            }
+            #header-controls > span:active{
+                background-color: white;
+                color: #2f708d;
             }
             #header-controls > span.active{
-                color: #2f708d;
                 background-color: white;
-                border-radius: 3px;
+                color: #2f708d;
             }
             .item{
                 /*min-height: 5em;*/
@@ -243,8 +253,10 @@
         <div id="header">
             <span contenteditable="true">Header-Style element</span>
             <div id="header-controls">
-                <span class="active">A</span>
+                <span></span>
                 <span></span>
+                <span class="active"></span>
+                <span></span>
             </div>
         </div>
         <div id="seq">
